--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool" url="https://google.com.br"></script>
         <script>
             // BACK REDIRECT
-            var urlBackRedirect = '../prevsl/index.html'; // lembre-se de usar a url sem espaços
+            var urlBackRedirect = 'https://clubcupom.github.io/02/'; // lembre-se de usar a url sem espaços
             // não altere nada abaixo dessa linha
             urlBackRedirect = urlBackRedirect = urlBackRedirect.trim() +
             (urlBackRedirect.indexOf("?") > 0 ? '&' : '?') +
